<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f2e6">

    <TextView
        android:id="@+id/moodly"
        android:layout_width="293dp"
        android:layout_height="128dp"
        android:layout_marginTop="228dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center_horizontal|top"
        android:letterSpacing="-0.05"
        android:text="@string/moodly"
        android:textAppearance="@style/moodly"
        android:textColor="#d38c6f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/form_userna"
        android:layout_width="386dp"
        android:layout_height="39dp"
        android:background="#EDE7DF"
        android:clipToOutline="true"
        app:circularflow_defaultRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodly">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:hint="@string/username"
            android:padding="0dp"
            android:textAppearance="@style/username"
            android:textColorHint="@color/material_dynamic_neutral60" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form_passwo"
        android:layout_width="386dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:background="#EDE7DF"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_userna">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:hint="@string/password"
            android:padding="0dp"
            android:password="true"
            android:textAppearance="@style/password"
            android:textColorHint="@color/material_dynamic_neutral60"
            android:textSize="16sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="110dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/inter_medium"
        android:gravity="center_horizontal|top"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot_pass"
        android:textColor="#916350"
        app:layout_constraintEnd_toEndOf="@+id/form_passwo"
        app:layout_constraintTop_toBottomOf="@+id/form_passwo" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#d38c6f"
        android:clickable="true"
        android:clipToOutline="true"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:text="Log in"
        android:textAppearance="@style/sign_up"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass" />

    <TextView
        android:id="@+id/don_t_have_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/don_t_have_"
        android:textColor="#916350"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/some_id2"
        android:layout_width="74dp"
        android:layout_height="63dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="84dp"
        android:gravity="center_horizontal|top"
        android:text="@string/some_id2"
        android:textAppearance="@style/some_id2"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="@+id/untitled_32"
        app:layout_constraintTop_toBottomOf="@+id/don_t_have_" />

    <ImageView
        android:id="@+id/untitled_32"
        android:layout_width="569dp"
        android:layout_height="496dp"
        android:layout_marginTop="138dp"
        android:background="@drawable/own_picture_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/don_t_have_" />


</androidx.constraintlayout.widget.ConstraintLayout>