<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f2e6">


    <TextView
        android:id="@+id/moodly"
        android:layout_width="293dp"
        android:layout_height="96dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center_horizontal|top"
        android:textSize="64sp"
        android:letterSpacing="-0.05"
        android:text="@string/moodly"
        android:textAppearance="@style/moodly"
        android:textColor="#d38c6f"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/form_full_n"
        android:layout_width="364dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:background="#EDE7DF"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moodly">

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:textSize="16sp"
            android:textColorHint="@color/material_dynamic_neutral60"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:hint="Name"
            android:textAppearance="@style/full_name" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form_email"
        android:layout_width="364dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:background="#EDE7DF"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_full_n">

        <EditText
            android:id="@+id/email_addre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="0dp"
            android:textColorHint="@color/material_dynamic_neutral60"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:hint="@string/email_addre"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/email_addre" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form_userna"
        android:layout_width="364dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="#EDE7DF"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_email">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0sp"
            android:textColorHint="@color/material_dynamic_neutral60"
            android:textSize="16dp"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:hint="@string/username"
            android:textAppearance="@style/username" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form_passwo"
        android:layout_width="364dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="#EDE7DF"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_userna">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/material_dynamic_neutral60"
            android:textSize="16dp"
            android:padding="0dp"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/password" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/form_confir"
        android:layout_width="364dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:background="#EDE7DF"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_passwo">

        <EditText
            android:id="@+id/confirm_pas"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_medium"
            android:textColorHint="@color/material_dynamic_neutral60"
            android:textSize="16sp"
            android:gravity="center"
            android:hint="@string/confirm_pas"
            android:inputType="textPassword"
            android:textAppearance="@style/confirm_pas" />

    </RelativeLayout>


    <Button
        android:id="@+id/button_signup"
        android:layout_width="364dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#d38c6f"
        android:clickable="true"
        android:clipToOutline="true"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/form_confir"
        app:strokeColor="#916350"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/already_hav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:text="@string/already_hav"
        android:textAppearance="@style/already_hav"
        android:textColor="#916350"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_signup" />

    <ImageView
        android:id="@+id/untitled_31"
        android:layout_width="569dp"
        android:layout_height="496dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/own_picture_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>